"""
grpc_server - 索克生活项目模块
"""

from api.grpc import accessibility_pb2, accessibility_pb2_grpc
from typing import Any
import grpc
import logging
import os
import sys

#! / usr / bin / env python3

"""
无障碍服务 gRPC 服务器实现
"""


# 导入protobuf生成的类


sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname(__file__), '.. / ..')))

logger = logging.getLogger(__name__)


class AccessibilityServicer(accessibility_pb2_grpc.AccessibilityServiceServicer):
    """无障碍服务 gRPC 服务实现"""

    def __init__(self, accessibility_service: Any):
        """
        初始化服务器

        Args:
            accessibility_service: 无障碍服务实例
        """
        self.accessibility_service = accessibility_service
        logger.info("AccessibilityServicer 初始化完成")

    def BlindAssistance(self, request, context):
        """
        导盲服务 - 提供场景识别和语音引导

        Args:
            request: BlindAssistanceRequest
            context: gRPC上下文

        Returns:
            BlindAssistanceResponse
        """
        try:
            logger.info(f"收到导盲服务请求: {request}")

            # 创建响应
            response = accessibility_pb2.BlindAssistanceResponse()
            response.success = True
            response.message = "导盲服务处理成功"
            response.guidance_text = "前方有障碍物，请向左转"
            response.audio_guidance = "audio_guidance_data"

            logger.info("导盲服务请求处理完成")
            return response

        except Exception as e:
            logger.error(f"处理导盲服务请求时出错: {e}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"服务内部错误: {str(e)}")

            response = accessibility_pb2.BlindAssistanceResponse()
            response.success = False
            response.message = f"处理失败: {str(e)}"
            return response

    def SignLanguageRecognition(self, request, context):
        """
        手语识别 - 将手语视频转换为文本

        Args:
            request: SignLanguageRequest
            context: gRPC上下文

        Returns:
            SignLanguageResponse
        """
        try:
            logger.info(f"收到手语识别请求: {request}")

            response = accessibility_pb2.SignLanguageResponse()
            response.success = True
            response.message = "手语识别处理成功"
            response.recognized_text = "你好，欢迎使用索克生活"
            response.confidence = 0.95

            logger.info("手语识别请求处理完成")
            return response

        except Exception as e:
            logger.error(f"处理手语识别请求时出错: {e}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"服务内部错误: {str(e)}")

            response = accessibility_pb2.SignLanguageResponse()
            response.success = False
            response.message = f"处理失败: {str(e)}"
            return response

    def ScreenReading(self, request, context):
        """
        屏幕阅读 - 提供屏幕内容的语音描述

        Args:
            request: ScreenReadingRequest
            context: gRPC上下文

        Returns:
            ScreenReadingResponse
        """
        try:
            logger.info(f"收到屏幕阅读请求: {request}")

            response = accessibility_pb2.ScreenReadingResponse()
            response.success = True
            response.message = "屏幕阅读处理成功"
            response.screen_text = "当前屏幕显示：索克生活健康管理平台"
            response.audio_description = "audio_description_data"

            logger.info("屏幕阅读请求处理完成")
            return response

        except Exception as e:
            logger.error(f"处理屏幕阅读请求时出错: {e}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"服务内部错误: {str(e)}")

            response = accessibility_pb2.ScreenReadingResponse()
            response.success = False
            response.message = f"处理失败: {str(e)}"
            return response

    def VoiceAssistance(self, request, context):
        """
        语音辅助 - 提供语音控制和语音响应

        Args:
            request: VoiceAssistanceRequest
            context: gRPC上下文

        Returns:
            VoiceAssistanceResponse
        """
        try:
            logger.info(f"收到语音辅助请求: {request}")

            response = accessibility_pb2.VoiceAssistanceResponse()
            response.success = True
            response.message = "语音辅助处理成功"
            response.response_text = "我已经为您安排了今天的健康检查提醒"
            response.audio_response = "audio_response_data"

            logger.info("语音辅助请求处理完成")
            return response

        except Exception as e:
            logger.error(f"处理语音辅助请求时出错: {e}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"服务内部错误: {str(e)}")

            response = accessibility_pb2.VoiceAssistanceResponse()
            response.success = False
            response.message = f"处理失败: {str(e)}"
            return response

    def AccessibleContent(self, request, context):
        """
        健康内容无障碍转换 - 将健康内容转换为无障碍格式

        Args:
            request: AccessibleContentRequest
            context: gRPC上下文

        Returns:
            AccessibleContentResponse
        """
        try:
            logger.info(f"收到无障碍内容转换请求: {request}")

            response = accessibility_pb2.AccessibleContentResponse()
            response.success = True
            response.message = "内容转换处理成功"
            response.accessible_text = "【健康提醒】今日建议：多喝水，适量运动，保持良好心情"
            response.audio_content = "audio_content_data"
            response.braille_content = "braille_content_data"

            logger.info("无障碍内容转换请求处理完成")
            return response

        except Exception as e:
            logger.error(f"处理无障碍内容转换请求时出错: {e}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"服务内部错误: {str(e)}")

            response = accessibility_pb2.AccessibleContentResponse()
            response.success = False
            response.message = f"处理失败: {str(e)}"
            return response

    def ManageSettings(self, request, context):
        """
        无障碍设置管理 - 管理用户的无障碍设置

        Args:
            request: SettingsRequest
            context: gRPC上下文

        Returns:
            SettingsResponse
        """
        try:
            logger.info(f"收到设置管理请求: {request}")

            response = accessibility_pb2.SettingsResponse()
            response.success = True
            response.message = "设置管理处理成功"

            # 创建设置对象
            settings = accessibility_pb2.AccessibilitySettings()
            settings.voice_speed = 1.0
            settings.font_size = 16
            settings.high_contrast = True
            settings.screen_reader_enabled = True
            settings.voice_assistant_enabled = True

            response.settings.CopyFrom(settings)

            logger.info("设置管理请求处理完成")
            return response

        except Exception as e:
            logger.error(f"处理设置管理请求时出错: {e}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"服务内部错误: {str(e)}")

            response = accessibility_pb2.SettingsResponse()
            response.success = False
            response.message = f"处理失败: {str(e)}"
            return response
